
@startuml exercice

interface Door{
     + lock()
     + unlock()
     +open()
     +close()
     +timeOutCallback()
     +proximityCallback()
}

class Timer{  
     
}

class Sensor{
    
   - isPersonClose() : boolean
}


class SensingDoor implements Door {

- _locked : boolean
- _opened : boolean

}

class TimedDoor implements Door {
    
    - _locked : boolean
    - _opened : boolean
     - {static} TIME_OUT : int
}



Sensor -- Door : register >

Timer -- Door : register >




@enduml